# CMakeList.txt : CMake project for ReviewClasses, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (ReviewClasses "ReviewClasses.cpp" "ReviewClasses.hpp")

# TODO: Add tests and install targets if needed.
